--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-:root{
-    
+*{
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .container {
     display: grid;
     grid-template: 1fr 2fr 5fr / 1fr 4fr; 
@@ -8,29 +10,37 @@
 
 .dashboard {
     grid-area: 1 / 1 / 4 / 2;
-    display: grid;
-    grid-template: 1fr 4fr 4fr / 1fr 3fr;
     background-color: #14a2e4;
     color: white;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .logo{
-    grid-area: 1 / 1 / 2 / 3;
+    margin: 10px;
 }
 
+.logo img{
+    vertical-align: middle;
+}
+
+.logo span{
+    vertical-align: middle;
+}
+
+
 .nav{
-    grid-area: 2 / 1 / 3 / 3;
+
 }
 
 .site-help{
-    grid-area: 3 / 1 / 4 / 3;
+
 }
 
 .search-container{
     grid-area: 1 / 2 / 2 / 3;
-    display: flex;
-    align-items: center;
-    flex: 2;
 }
 
 .search-container img{
@@ -50,7 +60,6 @@
 }
 
 .user-information{
-    outline: auto;
     align-self: center;
     justify-content: flex-end;
 }
@@ -59,7 +68,6 @@
     grid-area: 2 / 2 / 3 / 3;
     display: flex;
     align-items: center;
-    justify-content: space-around;
 }
 
 .welcome{
@@ -81,6 +89,16 @@
     border-radius:  25px;
     padding: 5px 10px;
     border-style: none;
+}
+
+.projects {
+    grid-area: 3 / 2 / 4 / 3;
+}
+
+.nav li {
+    align-items: flex-start;
+    font-weight: bold;
+    margin: 10px 0px;
 }
 
 #home {
@@ -119,3 +137,4 @@
 #privacy {
     list-style-image: url("./assets/icons/privacy.svg");
 }
+
